17682
This code:
{code}
object …
{code}

Doesn't compile:
{code}
/Users/Den/elipsis.scala:1: error: illegal character
object …
       ^
one error found
{code}
